<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" 
    
    android:background="@drawable/balloon_bg">

        <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/linearLayout"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_alignStart="@+id/linearLayout"
        android:layout_alignParentTop="true"     
        android:layout_marginTop="28dp"
        android:background="@drawable/linearlayout_bg"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="80dp"
            android:text="@string/personalLogin"
            android:textColor="#FF4000" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="ENTER USERNAME"
            android:textColor="#FFFFFF"
            android:paddingBottom="10dp" >

            <requestFocus />
        </EditText>

        <EditText
            android:layout_width="262dp"
            android:layout_height="match_parent"
            android:hint="ENTER PASSWORD"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:paddingBottom="10dp" />

        <Button
            android:id="@+id/btnPersonalLogin"
            style="@style/ButtonText2"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_gravity="center_horizontal"
            android:background="#F4FA58"
            android:paddingBottom="3dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/btnPersonalLogin" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/linearlayout_bg"
        android:orientation="vertical"
        android:padding="10dp" >

        <Button
            android:id="@+id/btn_google_sign_in"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/layers_gplus_button_bg"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/sign_in_with_google" />

        <com.facebook.widget.LoginButton
            android:id="@+id/facebook_login_button"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/layers_fb_button_bg"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/sign_in_with_facebook" />

        <Button
            android:id="@+id/btn_twitter_sign_in"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/layers_twitter_button_bg"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/sign_in_with_twitter" />
    </LinearLayout>

</RelativeLayout>
